test/invalid/NewBoolean/NewBoolean.plume
/**
 * @author Diogo Marques, 30100
 */
class NewBoolean extends Object is
	method override toString : () -> String is
		new Boolean().toString()